refactor(test): centralize IT infra with shared conditional Redis/Postgres containers
Ensure parity between local development and CI integration-test environments